# PowerMap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: domain-sni-dispatcher-report.md  task-3-report.md
deployment/: README.md
deployment/launchd/: com.powermap.client.plist  com.powermap.plist  com.powermap.server.plist
deployment/nginx/: powermap-admin.conf
deployment/systemd/: powermap-client.service  powermap-server.service  powermap.service
deployment/windows/: register-scheduled-task.ps1
docs/design/: 0001-merge-binaries.md
docs/releases/: v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
docs/superpowers/plans/: 2026-07-22-domain-mapping.md  2026-07-22-unified-binary.md
docs/superpowers/specs/: 2026-07-22-domain-mapping-design.md  2026-07-22-unified-binary-design.md
monitoring/: prometheus-alerts.yml
scripts/: install.ps1  install.sh
src/: access.rs  config.rs  diagnostic_report.rs  diagnostics.rs  domain_hosts.rs  expose.rs  lib.rs  local_services.rs  mapping_health.rs  metrics.rs  port_suggestions.rs  proto.rs  runtime.rs  signal.rs  tunnel.rs  update.rs
src/web/: index.html
